v0.6 배포 (#289)
* Update README.md

* Update README.md

* feat: isLogin 모듈 추가/ 페이지간 이벤트 쌓이는 문제 수정 (#260)

* feat: isLogin 모듈 추가

* fix: 페이지간 이벤트 쌓이는 문제 수정

* hoxfix: 이벤트 쌓이는 문제 해결

* chore: create_data.sql 작성 (#267)

* feat: 글 상세 페이지 게시글 삭제 기능 (#270)

* feat: 게시글 삭제 기능

* feat: 게시글 삭제 알림 모달 추가

* desing: 알림 모달 배경색 변경

* delete: 로그, 주석 삭제

* test: FollowRepositoryTest 코드 작성 (#269)

* test: FollowRepositoryTest 코드 작성

* test: DisplayName 추가

* test: TagRepositoryTest 테스트 코드 작성 및 리팩토링 (#268)

* test: TagRepositoryTest 테스트 코드 작성 및 리팩토링

- findHashtagsByPostId(): 게시물 id로 해시태그 조회 테스트
- findModelByName(): 모델 이름으로 모델 태그 조회 테스트

* refactor: 테스트 이름 변경

* refactor: 불필요한 PostRepository 멤버변수 삭제

* feat: 해시태그 id로 해시태그를 조회하는 메서드 추가

* test: TagRepository 테스트 코드 추가

- addHashtag(): 해시태그 추가 테스트
- addPostHashtag(): 게시물에 해시태그 추가 테스트
- deletePostHashtag(): 게시물에 해시태그 삭제 테스트

* test: ImageRepository 테스트코드 작성 (#271)

* test: ImageRepositoryTest 작성중

* refactor: test 코드를 위해 PostRepository의 keyholder 부분 수정

* test: getImageByPostId 테스트 작성
test: getImagesOfRecentPosts 테스트 작성

* test: getImagesOfRecentFollowingPosts 테스트 잓어

* test: findImagesByNickname 테스트 작성
refactor: findImagesByNickname 메소드 sql 예약어 처리

* refactor: Display 작성

* test: image 저장 테스트 작성

* refactor: 안쓰는 메소드 deprecated 처리

* test: Image 수정 테스트 작성

* refactor: 필요없는 코드 삭제

* test: LikeRepository 테스트 코드 추가 (#272)

* test: findUserById 유저가 없을 경우 테스트 추가

* test: isLogin api test 코드 작성

* test: LikeRepository test 코드 추가

* refactor: 쓰지 않는 Follow model 클래스 삭제

* test: PostRepository 테스트 코드 작성 (#273)

* test: PostRepository의 게시글 추가 테스트 코드 작성

* test: PostRepository의 테스트 코드 추가

* style: 주석 추가

* test: bean 관련 테스트코드 추가 (#274)

* test: bean 관련 테스트코드 추가

* refactor: end of line 추가

* Fix: 프로필 페이지 버그 수정 (#275)

* fix: 닉네임 수정창 사라질때 비밀번호 수정창 보이는 버그 수정

* fix: 메뉴 아이템이 뒤에 있던 것 수정

* fix: 기존 비밀번호 틀렸을때 오류출력, 기존 비밀번호와 변경할 비밀번호와 중복 체크

* feat: 비